# seittik

./: .gitignore  CHANGELOG.md  noxfile.py  poetry.toml  pyproject.toml
doc/: .babelrc.js  404.md  conf.py  design-notes.md  index.md  package-lock.json  package.json  user-guide.md  webpack.config.babel.js
doc/_src/: index.js
doc/_static/css/: local.css
doc/apidocs/: index.md
src/seittik/: pipes.py  shears.py
src/seittik/utils/: funcutils.py
test/: conftest.py  test_abc.py  test_argutils.py  test_classutils.py  test_collections.py  test_compareutils.py  test_diceutils.py  test_flatten.py  test_funcutils.py  test_merge.py  test_pipes.py  test_randutils.py  test_sentinels.py  test_shears.py  test_stringutils.py  test_structutils.py  test_walk.py
